Teach the translator the entity family: injected uniforms and the ENTITY inputs
Two pieces the entity milestone cannot do without, both judged by the
out-of-game harness.

The three uniforms Iris injects for entity and block programs, entityId
first, become members of the block when a program of those families
mentions them without declaring them, the same move the fixed function
attributes already make. Which family a program belongs to is answered by
walking the fallback chain rather than by a second list of names. Six
programs of Bliss stop failing to link on it: 749 of 785 programs now link,
1744 of 1863 units translate, and the eighteen translated files that change
change by that one member and nothing else.

VertexInputs gains ENTITY: the six elements of the game's entity format,
declared under the names the format carries because the matching is by name
and asymmetric, and the pack's own names built from them as macros. The
lightmap is UV2, not UV1, which is the overlay. The names the format
reserves are taken from a pack that declares its own varyings under them,
renamed across every stage at once. What the mesh cannot carry, mc_Entity
and its kind, is synthesized with the fallbacks the terrain already uses.
All 264 stages of the corpus's 132 entity family programs compile against
it, and the six elements survive into the SPIR-V of every vertex stage.

One repair in passing: the synthesized set iterated in Set.of order, which
changes between JVMs, so two globals swapped places from run to run and a
pipeline already in the device cache was recompiled for a shader that only
a compiler could tell apart. It iterates sorted now.